--- a/huangchengxiangfu.html
+++ b/huangchengxiangfu.html
@@ -43,7 +43,7 @@
     </nav>
       <div class='introduction container'>
         <div class='row'>
-          <img src='pic/huangchengxiangfu_kuan.jpg'>
+          <img src='pic/huangchengxiangfu_kuan.jpg' alt="皇城相府">
         </div>
         <div class="row text-center">
           <h2>皇城相府</h2>
